[package]
name = "url_shorthner"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dashmap = "6.1.0"
http-body-util = "0.1.3"
mime = "0.3.17"
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
